src/API Gateway/Envoy/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 9001
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: hospital_route
            virtual_hosts:
            - name: service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/hm"
                route:
                  prefix_rewrite: "/api"
                  cluster: hospital_service
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: hospital_service
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: hospital_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: hospitalmgt.api
                port_value: 80
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9000
